k8s/monitoring/networking.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infra-grafana-ingress
  namespace: model-dev
  labels:
    tier: infra
  annotations:
    haproxy.org/forwarded-for: "enabled"
    haproxy.org/request-set-header: "X-Forwarded-Proto https"
spec:
  ingressClassName: haproxy
  tls:
  - hosts:
    - monitor-model-dev.nrp-nautilus.io
  rules:
  - host: monitor-model-dev.nrp-nautilus.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: infra-grafana-service
            port:
              number: 3000
